--- a/src/app/modals/confirm-exit/confirm-exit.page.html
+++ b/src/app/modals/confirm-exit/confirm-exit.page.html
@@ -2,11 +2,12 @@
   <div class="wrapper"></div>
   <ion-row>
     <ion-col size="12" class="sign-message ion-padding-top">
-      <img class="padding-top-20" src="assets/s1.png" />
+      <img class="padding-top-30" src="assets/guy-sad.png" />
     </ion-col>
 
     <ion-col size="12" class="message padding-horizontal-22">
-      Are you sure you want to exit?
+      Are you sure you want to exit? <br />
+      Your progress would be lost
     </ion-col>
 
     <ion-col size="6">
