--- a/src/app/modals/level-pass/level-pass.page.html
+++ b/src/app/modals/level-pass/level-pass.page.html
@@ -2,7 +2,7 @@
   <div class="wrapper"></div>
   <ion-row>
     <ion-col size="12" class="sign-message ion-padding-top">
-      <img class="padding-top-20" src="assets/s1.png" />
+      <img class="padding-top-20" src="assets/girl-thumbs-up.png" />
     </ion-col>
 
     <ion-col size="12" class="message padding-horizontal-22">
