--- a/src/app/pages/category/category.page.scss
+++ b/src/app/pages/category/category.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --background: url("../../../assets/background.jpg") no-repeat center center /
+  --background: url("../../../assets/meadow-1.png") no-repeat center center /
     cover;
   font-family: keepCalm;
 }
