Main page UI fix; Modal UI and routing fix; Adding assets for bg

--- a/src/app/modals/confirm-exit/confirm-exit.page.html
+++ b/src/app/modals/confirm-exit/confirm-exit.page.html
@@ -24,7 +24,7 @@
         class="ion-activatable ripple-parent starting-button ion-text-left"
         (click)="confirmExit()"
       >
-        <img src="assets/buttons/circular/exit.png" />
+        <img src="assets/buttons/circular/exit.png" class="ion-text-left" />
         <ion-ripple-effect></ion-ripple-effect>
       </div>
     </ion-col>
