--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-header translucent="true">
+<!-- <ion-header translucent="true">
   <ion-toolbar>
     <ion-buttons slot="primary">
       <ion-button (click)="gotoAchievements()" slot="start" fill="clear">
@@ -6,9 +6,8 @@
         <ion-icon name="close" slot="icon-only" color="white"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <!-- <ion-title class="text-title" text-center>Level</ion-title> -->
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content fullscreen="true">
   <div id="container">
