--- a/src/app/modals/level-pass/level-pass.page.html
+++ b/src/app/modals/level-pass/level-pass.page.html
@@ -9,20 +9,21 @@
       Congratulations! You have learned everything
     </ion-col>
 
-    <ion-col size="12">
+    <ion-col size="6">
       <div
-        class="ion-activatable ripple-parent starting-button float-left"
+        class="ion-activatable ripple-parent starting-button ion-text-right"
         (click)="gotoHome()"
       >
-        <img class="width-40" src="assets/buttons/circular/home.png" />
+        <img src="assets/buttons/circular/home.png" class="ion-text-right" />
         <ion-ripple-effect></ion-ripple-effect>
       </div>
-
+    </ion-col>
+    <ion-col size="6">
       <div
-        class="ion-activatable ripple-parent starting-button"
+        class="ion-activatable ripple-parent starting-button ion-text-left"
         (click)="retry()"
       >
-        <img class="width-40" src="assets/buttons/circular/retry.png" />
+        <img src="assets/buttons/circular/retry.png" class="ion-text-left" />
         <ion-ripple-effect></ion-ripple-effect>
       </div>
     </ion-col>
