--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,13 +1,13 @@
-<!-- <ion-header translucent="true">
+<ion-header translucent="true">
   <ion-toolbar>
     <ion-buttons slot="primary">
-      <ion-button (click)="gotoAchievements()" slot="start" fill="clear">
-        <img src="./assets/buttons/circular/achieve.png" />
+      <ion-button (click)="logout()" slot="start" fill="clear">
+        <img src="./assets/buttons/circular/exit.png" />
         <ion-icon name="close" slot="icon-only" color="white"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-</ion-header> -->
+</ion-header>
 
 <ion-content fullscreen="true">
   <div id="container">
