added pinyin for practice mode; remove learn mode

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -18,9 +18,8 @@
       <ion-col> Learn Chinese </ion-col>
     </ion-row>
 
-    <ion-row style="margin-top: 10px">
+    <!-- <ion-row style="margin-top: 10px">
       <ion-col>
-        <!-- <ion-item lines="none"> -->
         <div class="ion-activatable ripple-parent starting-button">
           <img
             src="assets/buttons/learnBtn.png"
@@ -29,10 +28,8 @@
           />
           <ion-ripple-effect></ion-ripple-effect>
         </div>
-        <!-- </ion-item> -->
-        <!-- <ion-button class="boxes text-category" expand="block" color="verdigris">Practice</ion-button> -->
       </ion-col>
-    </ion-row>
+    </ion-row> -->
 
     <ion-row style="margin-top: 10px">
       <ion-col>
