--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header translucent="true">
   <ion-toolbar>
-    <ion-buttons slot="primary">
-      <ion-button (click)="logout()" slot="start" fill="clear">
+    <ion-buttons slot="start">
+      <ion-button (click)="openSideMenu()" slot="start" fill="clear">
         <img src="./assets/buttons/circular/exit.png" />
         <ion-icon name="close" slot="icon-only" color="white"></ion-icon>
       </ion-button>
