--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -52,6 +52,6 @@
     </ion-row>
   </div>
 
-  <!-- <ion-button (click)="openModal()">uwee</ion-button> - -->
+  <ion-button (click)="openModal()">uwee</ion-button> -
   <!-- <img [src]="url"> -->
 </ion-content>
