--- a/src/app/modals/confirm-exit/confirm-exit.page.scss
+++ b/src/app/modals/confirm-exit/confirm-exit.page.scss
@@ -5,6 +5,16 @@ ion-content {
   object-fit: fill;
 }
 
+#container {
+  text-align: center;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 65%;
+  transform: translateY(-75%);
+}
+
 .starting-button {
   width: 50%;
   border-radius: 40px;
