more display fixes

--- a/src/app/modals/level-pass/level-pass.page.html
+++ b/src/app/modals/level-pass/level-pass.page.html
@@ -6,7 +6,7 @@
       </ion-col>
 
       <ion-col size="12" class="message padding-horizontal-22">
-        Congratulations! You have learned everything
+        Congratulations! <br />You have learned everything
       </ion-col>
 
       <ion-col size="6">
