--- a/src/app/pages/main/main.page.scss
+++ b/src/app/pages/main/main.page.scss
@@ -47,6 +47,11 @@ ion-toolbar {
   border-radius: 30px;
 }
 
+.speak-container {
+  width: 40%;
+  border-radius: 50%;
+}
+
 /* Centered text */
 .centered {
   position: absolute;
