--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -6,26 +6,58 @@
         <ion-icon name="arrow-back" slot="icon-only" color="white"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title class="text-title" text-center>Profile</ion-title>
+    <ion-title class="text-title-alt" style="font-weight: bold" text-center
+      >Profile</ion-title
+    >
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding" fullscreen="true">
   <div id="container">
-    <div class="text-title">Welcome,</div>
-    <div *ngIf="name" class="text-title font-30" style="margin-bottom: 30%">
+    <div class="text-title-alt">Welcome,</div>
+    <div
+      *ngIf="name"
+      class="text-title-alt font-30"
+      style="margin-bottom: 10%; color: black"
+    >
       {{ name }}
     </div>
-    <div *ngIf="progress">
-      <div class="text-title">Last played</div>
-      <div style="margin-bottom: 30%">
-        {{ progress.lastplayed | date: "dd MMMM YYYY"}} - {{ progress.lastscore
-        }} points
-      </div>
-    </div>
-    <div *ngIf="highscore">
-      <div class="text-title">Highscore</div>
-      <div>{{ highscore }}</div>
-    </div>
+
+    <ion-card *ngIf="progress" class="no-margin-horizontal">
+      <ion-card-content>
+        <ion-row>
+          <ion-col class="text-title-alt" style="font-family: keepCalm">
+            Last played
+          </ion-col>
+        </ion-row>
+        <hr />
+        <ion-row>
+          <ion-col
+            style="font-family: keepCalm; font-size: 14px; font-weight: 100"
+          >
+            {{ progress.lastplayed | date: "dd MMMM YYYY"}} <br />
+            {{ progress.lastscore }} points</ion-col
+          >
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card *ngIf="highscore" class="no-margin-horizontal">
+      <ion-card-content>
+        <ion-row>
+          <ion-col class="text-title-alt" style="font-family: keepCalm">
+            Total Score
+          </ion-col>
+        </ion-row>
+        <hr />
+        <ion-row>
+          <ion-col
+            style="font-family: keepCalm; font-size: 14px; font-weight: 100"
+          >
+            {{ highscore }} points</ion-col
+          >
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
