--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -83,7 +83,7 @@
             />
             <img
               *ngIf="type == 'practice'"
-              src="assets/buttons/speakBtn.png"
+              src="assets/buttons/answerBtn.png"
               style="width: 100%"
               (click)="startSpeech()"
             />
